# grocy-mcp

./: .gitignore  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml
scripts/: live_readonly_test.py  model_validate.py  model_validation_prompt.txt
skill/: SKILL.md
src/grocy_mcp/: __init__.py  __main__.py  client.py  tools.py
tests/: test_client.py  test_protocol.py
