[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-grocy-mcp"
version = "0.2.1"
description = "MCP server for Grocy household ERP inventory and shopping workflows"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Hermes Agent" }]
keywords = ["grocy", "mcp", "model-context-protocol", "inventory", "shopping-list"]
dependencies = [
  "mcp>=1.2.0",
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "respx>=0.21.0",
  "ruff>=0.8.0",
  "mypy>=1.10.0",
]

[project.scripts]
grocy-mcp = "grocy_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/grocy_mcp"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
